--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 # Postgres Live
-# DB_HOST=127.0.0.1
-# DB_USER=younny
-# DB_PASSWORD=Slobbodibo
-# DB_NAME=slobbo_api
-# DB_PORT=5432
-
-# Postgres Test
 DB_HOST=127.0.0.1
 DB_USER=postgres
 DB_PASSWORD=yunalito
 DB_NAME=slobbo_api_test
 DB_PORT=5432
+
+# Postgres Dev
+DEV_DB_HOST=127.0.0.1
+DEV_DB_USER=postgres
+DEV_DB_PASSWORD=yunalito
+DEV_DB_NAME=slobbo_api_test
+DEV_DB_PORT=5432
