--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,21 @@
 version: '3.9'
+
 services:
   app:
-    container_name: golang_container
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
-      - DATABASE_HOST=${DB_HOST}
-      - DATABASE_PORT=${DB_PORT}
-      - TEST_POSTGRES_USER=${TEST_DB_USER}
-      - TEST_POSTGRES_PASSWORD=${TEST_DB_PASSWORD}
-      - TEST_POSTGRES_DB=${TEST_DB_NAME}
-      - TEST_DATABASE_HOST=${TEST_DB_HOST}
-      - TEST_DATABASE_PORT=${TEST_DB_PORT}
+    container_name: app_container
     tty: true
     build: .
     ports:
-      - 8000:8080
+      - 8080:8080
     restart: on-failure
     volumes:
-      - .:/app
+      - api:/usr/src/app/
     depends_on:
-      - postgresdb
+      - slobbo-api
     networks:
-      - learning
+      - whatisthis
 
-  postgresdb:
+  slobbo-api:
     image: postgres:latest
     container_name: postgres_container
     environment:
@@ -33,29 +23,33 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
       - DATABASE_HOST=${DB_HOST}
+      - DATABASE_PORT=${DB_PORT}
     ports:
-      - '1234:5432'
+      - '5432:5432'
     volumes:
-      - ./slobbo_data:/var/lib/postgresql/data
+      - database_postgres:/var/lib/postgresql/data
     networks:
-      - learning
+      - whatisthis
 
-  postgresdb_test:
-    image: postgres:latest
-    container_name: postgres_test_container
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin_container
     environment:
-      - POSTGRES_USER=${TEST_DB_USER}
-      - POSTGRES_PASSWORD=${TEST_DB_PASSWORD}
-      - POSTGRES_DB=${TEST_DB_NAME}
-      - DATABASE_HOST=${TEST_DB_HOST}
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    depends_on:
+      - slobbo-api
     ports:
-      - '4568:5432'
-    volumes:
-      - ./slobbo_data:/var/lib/postgresql/data
+      - "5050:80"
     networks:
-      - learning
+      - whatisthis
+    restart: unless-stopped
+
+volumes:
+  api:
+  database_postgres:
 
 # Networks to be created to facilitate communication between containers
 networks:
-  learning:
+  whatisthis:
     driver: bridge
