--- a/kubernetes/app-deployment.yaml
+++ b/kubernetes/app-deployment.yaml
@@ -19,10 +19,10 @@ spec:
       - name: slobbo-backend
         image: slobbo/slobbo-api:1.0.0
         imagePullPolicy: IfNotPresent
-        resources:                                # Best practice to specify resources for our application to prevent unintended consequences of rapid scaling.
-          limits:                                 # kubelet enforces limits so that the running container is not allowed to use more of that resource than the limit set
+        resources:                                
+          limits:                                 
             cpu: 900m
-          requests:                               # the scheduler uses this information to decide which node to place the Pod on
+          requests:                               
             cpu: 500m     
         ports:
           - name: http
